# cheki

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  composer.json  docker-compose.yml  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
public/: bookmarklet.js  llms.txt
python/: README.md  pyproject.toml
python/cheki/: __init__.py  cli.py  client.py  client_types.py  registry.py
python/cheki/banks/: __init__.py  awash.py  base.py  boa.py  cbe.py  cbebirr.py  dashen.py  kaafiebirr.py  mpesa.py  siinqee.py  telebirr.py  zemen.py
python/ethio_receipt_verify/: __init__.py  cli.py  client.py  client_types.py
python/tests/: test_banks.py  test_client.py
scripts/: bump-version.sh  download-tesseract-data.js  pre-commit-version-check.sh  sync-package-metadata.sh
sdks/dart/: README.md  analysis_options.yaml  pubspec.yaml
sdks/go/: README.md  cheki.go  go.mod  types.go
sdks/php/: README.md  composer.json
sdks/typescript/: README.md  index.d.ts  index.js  index.mjs  package.json  tsconfig.json
src/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  template.tsx
src/cli/: index.ts
src/components/: BankLogo.tsx  BankSelector.tsx  Chrome.tsx  CodeBlock.tsx  Icon.tsx  language-switcher.tsx
src/lib/: banks.ts  guides.ts  highlight.ts  index.ts  ocr-parser.ts  ocr.ts  (+3 more)
tests/: ocr-parser.test.ts  parse-screenshots.test.ts  server-ocr.test.ts
(+92 files in other folders)
